# cp3-2020

./: .gitignore  CMakeLists.txt  delaunay.py  fem.cpp  fem.hpp  main.cpp  rupperts.cpp  rupperts.hpp  rupperts.py  square.in  square.out  triang.cpp  triang.hpp  triang_old.cpp  triang_old.hpp  triangtest.cpp  triangtest_old.cpp  visualise.py
